# sockpuppet

./: .clang-format  .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md
cmake/: FindPCAP.cmake
doc/html/: README_8md.html  annotated.html  base64_8h.html  base64_8h_source.html  classb64-members.html  classb64.html  classes.html  classsockpuppet_1_1client-members.html  classsockpuppet_1_1client.html  classsockpuppet_1_1server-members.html  classsockpuppet_1_1server.html  client_8h.html  client_8h_source.html  dir_ac163500e4e9628768fde22f5bb2e552.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  globals.html  globals_vars.html  index.html  md__home_jonesy_git_sockpuppet_README.html  menudata.js  namespaces.html  namespacesockpuppet.html  pages.html  server_8h.html  server_8h_source.html
doc/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_6.js  all_7.js  classes_0.js  classes_1.js  classes_2.js  files_0.js  files_1.js  files_3.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  namespaces_0.js  pages_0.js  searchdata.js  variables_0.js
doc/latex/: README_8md.tex  annotated.tex  base64_8h.tex  classb64.tex  classsockpuppet_1_1client.tex  classsockpuppet_1_1server.tex  client_8h.tex  dir_ac163500e4e9628768fde22f5bb2e552.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  files.tex  md__home_jonesy_git_sockpuppet_README.tex  namespaces.tex  namespacesockpuppet.tex  refman.tex  server_8h.tex
example/: CMakeLists.txt  client.cc  keylog.cc  server.cc
include/: CMakeLists.txt
include/sockpuppet/: base64.h  blocking.h  client.h  server.h
include/sockpuppet/proto/: commands.pb.cc  commands.pb.h
include/sockpuppet/recon/collect/: arp.h  keylog.h  sniff.h
include/sockpuppet/recon/scan/: syn.h
include/sockpuppet/scan/: syn.h
include/sockpuppet/util/: privs.h  uuid.h
proto/: CMakeLists.txt  commands.proto
tests/: CMakeLists.txt  blocking.cc  client.cc  server.cc  sockpuppet.cc
tests/recon/collect/: arp.cc  sniff.cc
tests/recon/scan/: syn.cc
tests/scan/: syn.cc
tests/util/: privs.cc
